Update Readme and sample configuration file

--- a/src/main/resources/sympa-config-example.properties
+++ b/src/main/resources/sympa-config-example.properties
@@ -20,3 +20,6 @@ sympa.domain.wsdl = https://demo.sympa.org/sympa/wsdl
 # sympa.domain.wsdl is the url of the Sympa Service you wish to access.
 # The sympa.domain.wdsl URL and sympa.domain.url should reference the same fully qualified host name
 sympa.domain.url = https://demo.sympa.org/sympasoap
+
+# Set the connector active. Should be set to Y
+CONNECTOR_BASE_CONFIGURATION_ACTIVE=Y
