--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,24 @@
-plugins {
-    id 'java'
+buildscript {
+    ext {}
+    repositories {
+        maven {
+            url "https://artifactory.exclamationlabs.com/artifactory/libs-release-local"
+        }
+    }
+    dependencies {
+        classpath(group: 'com.exclamationlabs.connid', name: 'connector-base-config-plugin', version: "${config_plugin_version}-+")
+    }
 }
 
-group 'com.exclamationlabs.connid.base.sympa'
-version '1.0-SNAPSHOT'
+plugins {
+    id 'java'
+    id 'java-library'
+    id 'maven-publish'
+    id 'com.jfrog.artifactory' version "${artifactory_publish_version}"
+}
+
+//group 'com.exclamationlabs.connid.base.sympa'
+//version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
@@ -16,8 +31,13 @@ repositories {
     }
 }
 
+apply plugin: 'com.exclamationlabs.connid.base.config.plugin'
+
 sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
+
+def build_version = System.getenv('BUILD_NUMBER') == null ? 'SNAPSHOT' : System.getenv('BUILD_NUMBER')
+project.version="${project_version}-${build_version}"
 
 def versionNumber = "${project_version}"
 
@@ -27,16 +47,23 @@ dependencies {
     runtimeOnly 'com.evolveum.polygon:connector-common:1.5.0.0'
 
     // apache components
-    //implementation 'org.apache.commons:commons-io:2.8.0'
     implementation 'org.apache.commons:commons-text:1.9'
     implementation 'org.apache.httpcomponents:httpclient:4.5.13'
     // Jackson components
     implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.12.3'
 
-    implementation "com.exclamationlabs.connid:connector-base:${base_version}-+"
+    implementation "com.exclamationlabs.connid:connector-base:${base_connector_version}-+"
 
-    testImplementation "com.exclamationlabs.connid:connector-base-test-support:${base_version}-+"
+    testImplementation "com.exclamationlabs.connid:connector-base-test-support:${base_connector_version}-+"
     testImplementation 'net.tirasa.connid:connector-framework-internal:1.5.0.0'
+}
+
+sourceSets {
+    main {
+        java {
+            srcDirs = ['src/main/java', 'generatedConfig']
+        }
+    }
 }
 
 task copyDependencyJars(type: Copy) {
@@ -51,10 +78,17 @@ task copyDependencyJars(type: Copy) {
 
 task baseClean(type: Delete) {
     delete 'custom'
+    delete 'generatedConfig'
 }
 
-jar {
-    archiveName("${project.name}-${versionNumber}-connector.jar")
+
+def fatClassifierName = 'fat'
+def thinClassifierName = 'thin'
+
+task fatJar(type: Jar) {
+
+    archiveClassifier = fatClassifierName
+    archiveName("${project.name}-${project.version}-${fatClassifierName}.jar")
     from 'custom', 'build/classes/java/main', 'src/main/resources'
 
     manifest {
@@ -64,5 +98,52 @@ jar {
     }
 }
 
+task thinJar(type: Jar) {
+
+    archiveClassifier = thinClassifierName
+    archiveName("${project.name}-${project.version}-${thinClassifierName}.jar")
+    from 'build/classes/java/main'
+
+}
+
+thinJar.dependsOn('compileJava')
+
+fatJar.dependsOn('compileJava', 'copyDependencyJars')
+compileJava.dependsOn('generateConfiguration')
+
 clean.dependsOn('baseClean')
-jar.dependsOn('copyDependencyJars')
+
+
+publishing {
+    publications {
+        connector_fat(MavenPublication) {
+            artifact fatJar
+        }
+
+        connector_thin(MavenPublication) {
+            artifact thinJar
+        }
+    }
+}
+
+artifactoryPublish {
+    publications(publishing.publications.connector_fat, publishing.publications.connector_thin)
+}
+
+artifactory {
+    contextUrl = 'https://artifactory.exclamationlabs.com/artifactory'
+    publish {
+        repository {
+            repoKey = System.getenv('ARTIFACTORY_GRADLE_REPO')
+            username = System.getenv('ARTIFACTORY_GRADLE_USER')
+            password = System.getenv('ARTIFACTORY_GRADLE_PASS')
+        }
+        defaults {
+            publications('connector_fat', 'connector_thin')
+            publishArtifacts = true
+
+            publishPom = true // Publish generated POM files to Artifactory (true by default)
+            publishIvy = false // Publish generated Ivy descriptor files to Artifactory (true by default)
+        }
+    }
+}
