--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,4 @@
-project_version=1.0.5
-base_version=1.1.3
+project_version=1.1
+base_connector_version=2.0.9
+config_plugin_version=2.0.8
+artifactory_publish_version=4.24.23
