Update to Base Connector 2.0.9 - clear values in properties

--- a/src/test/resources/__bcon__development__internet2__sympa.properties
+++ b/src/test/resources/__bcon__development__internet2__sympa.properties
@@ -1,6 +1,6 @@
-custom.appName=soapTest
-custom.appPassword=cQe{WYL_Q4T7[;_$
-custom.listMaster=sfox@exclamationlabs.com
-custom.sympaDomainWSDL=https://lists.dev.at.internet2.edu/sympa/wsdl
-custom.sympaDomainURL=https://lists.dev.at.internet2.edu/sympasoap
+custom.appName=
+custom.appPassword=
+custom.listMaster=
+custom.sympaDomainWSDL=
+custom.sympaDomainURL=
 
