--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,10 @@ buildscript {
     repositories {
         maven {
             url "https://artifactory.exclamationlabs.com/artifactory/libs-release-local"
+            credentials {
+                username = System.getenv('ARTIFACTORY_GRADLE_USER')
+                password = System.getenv('ARTIFACTORY_GRADLE_PASS')
+            }
         }
     }
     dependencies {
@@ -24,6 +28,10 @@ repositories {
     mavenCentral()
     maven {
         url "https://artifactory.exclamationlabs.com/artifactory/libs-release-local"
+        credentials {
+                username = System.getenv('ARTIFACTORY_GRADLE_USER')
+                password = System.getenv('ARTIFACTORY_GRADLE_PASS')
+            }
     }
 
     maven {
